processed and sorted location data

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,10 +1,7 @@
-<div class="row">
-	<div class="col-md-6 col-offset-3">
-
-		<input type='text' class="form-control" ng-model="search" />
-
-		<location-list></location-list>
-
-	</div>
+ <div class="row">
+		<div class="col-md-6">
+			{{selected}}
+			<input type='text' class="form-control" ng-model="search" />
+			<location-list></location-list>
+		</div>
 </div>
-
