--- a/directives/locationList.html
+++ b/directives/locationList.html
@@ -1,5 +1,8 @@
 <div>
-		<div ng-repeat='location in locations | filter:search'>
-		{{location.name  }}
-		</div>
+		<p>location list</p>
+		<state-container
+		selected='selected'
+		state-location='state' 
+		ng-repeat='state in states'>
+		</state-container>
 </div>
